# DataStructure-Assignment

./: CMakeLists.txt  FTARVBM.h  README.md  TARVBM.c  TC_EDA.csv  TImoveis.c  a  bp_tree.c  falloc.c  main  node.c  testes.c
files/: common.css  common.js  home.html  home.js  index.html  script.js  style.css
src/: BPT_DUB.c  BPT_DUB_IMV.c  BPT_IMV.c  BPT_INT.c  BPT_INT_IMV.c  BPT_STR.c  BPT_STR_IMV.c  FTARVBM.c  FTARVBM.h  HashMap.c  TARVBMG.c  TARVBMG.h  TImoveis.c  TL.c  WebServer.c  falloc.c  helper_functions.c  interface.c  json.c  main.c  testes.c  web_functions.c
