project(DataStructure)

add_executable(DataStructure
        src/TImoveis.c
        src/falloc.c
        src/TARVBMG.h
        src/TARVBMG.c
        src/testes.c
        src/BPT_INT.c
        src/BPT_STR.c
        src/WebServer.c
        src/HashMap.c
        src/BPT_DUB.c
        src/BPT_IMV.c
        src/BPT_INT_IMV.c
        src/BPT_DUB_IMV.c
        src/BPT_STR_IMV.c
)
